--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         var canvas = document.querySelector('canvas');
         var context = canvas.getContext("2d");
         if (image!=null){
+            context.clearRect(0,0,canvas.width,canvas.height)
             context.drawImage(image,0,0,canvas.width,canvas.height);
         }
 
@@ -55,9 +56,10 @@
         context.strokeStyle = "black";
         context.lineWidth = "3";
 
+
         if (topLine!=null){
-            context.fillText(topLine,canvas.width/2,40);
-            context.strokeText(topLine,canvas.width/2,40);
+            context.fillText(topLine,canvas.width/2,50);
+            context.strokeText(topLine,canvas.width/2,50);
         }
 
         if (bottomLine!=null){
